tests/NormalTests/paczka1/small_fuzzy/48626891.err
Error in line 1: N3404H S231 6,8
Error in line 4: aCyb A784 93,5
